<resources>

    <string name="app_name">Repair Brain 2.0</string>
    <string name="repaired_or_impaired">Repaired or Impaired?</string>
    <string name="none">none</string>

    <string name="lastly_relapsed">Relapsed On</string>
    <string name="next_step">Next Step</string>
    <string name="enter_the_positive_effect">Enter the +ve effect</string>
    <string name="enter_the_ve_effect">Enter the -ve effect</string>
    <string name="enter_the_next_step">Enter the next step</string>
    <string name="replacing_accuracy">Replacing Accuracy :</string>
    <string name="zero">0%</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="next_steps">Next Steps :</string>
    <string name="positive_effects">Positive Effects :</string>
    <string name="negative_effects">Negative Effects :</string>
    <string name="edit">Edit</string>
    <string name="star">*</string>
    <string name="step">Step</string>
    <string name="save">Save</string>
    <string name="prev">prev</string>
    <string name="date">date</string>
    <string name="date_added">Date Added :</string>
    <string name="show_on">Show On :</string>
    <string name="habit">Habit</string>
    <string name="not_found">...</string>
    <string name="steps">Steps</string>
    <string name="username_or_e_mail">E-mail</string>
    <string name="get_email_or_username">get email or username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="craete_account">Create Account</string>
    <string name="login_to_repair_brain">Login To Repair Brain</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_with_google">Login With Google</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_repair_brain">Sign up To Repair Brain</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="verify_password">Verify Password</string>
    <string name="hrs_left">hrs left</string>
    <string name="habits">Habits</string>
    <string name="change">Change</string>
    <string name="next">next</string>
    <string name="effects">Effects</string>
    <string name="_0">00</string>
    <string name="show_all">Show All</string>
    <string name="enter_the_habit">Enter the Practice</string>
    <string name="all">All</string>
    <string name="Sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="remove">Remove</string>
    <string name="reset">Reset</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="next_steps_">Next Steps</string>
    <string name="show_common">Show Common</string>
    <string name="source">Source</string>
    <string name="suggest">Suggest</string>
    <string name="name">Name</string>
    <string name="link">Link</string>
    <string name="accuracy">Accuracy</string>
    <string name="logout">Logout</string>

    <string name="addiction_name">Addiction Name</string>
    <string name="trigger_name">Trigger Name</string>

    <string name="triggers">Triggers</string>
    <string name="practices">Practices</string>
    <string name="recovery">Recovery</string>

    <string name="repairs">Repairs</string>
    <string name="journey">Journey</string>
    <string name="relapses">Relapses</string>
    <string name="relapsed_date">Relapsed Date</string>
    <string name="time_gone">Progress : </string>
    <string name="progress">Progress</string>
    <string name="search">Search</string>
    <string name="request">Request</string>
    <string name="add_common">Add common</string>
    <string name="enter_step">Enter step</string>
    <string name="paste_source_link">Paste source link</string>
    <string name="enter_source">Enter source</string>
    <string name="select_or_enter">Select or Enter</string>
    <string name="source_colon">Source :</string>
    <string name="search_or_enter">Search or Enter</string>
    <string name="paste_the_note_link">Paste the note link</string>
    <string name="changes">Changes</string>
    <string name="challenges">Challenges</string>
    <string name="growth">Growth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insights">Insights</string>
    <string name="settings">Settings</string>
    <string name="auto_login">Auto Login</string>
    <string name="delete_account">Delete Account</string>
    <string name="notifications">Notifications</string>
    <string name="show_notification">Show Notification</string>
    <string name="show_by">Show By</string>
    <string name="_2_10_pm">2:10 PM</string>
    <string name="username_">Username :</string>
    <string name="challenge">Challenge</string>
    <string name="update">Update</string>
    <string name="insight">Insight</string>
    <string name="change_question">Change Question\n</string>
    <string name="what_is_the_question">What is the Question?</string>
    <string name="ask_yes_or_no">Ask Yes or No</string>

</resources>