<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:columnCount="2"
        android:rowCount="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/insight"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <AutoCompleteTextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:hint="@string/search_or_enter"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/source"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <AutoCompleteTextView
            android:id="@+id/source_name"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_marginStart="5dp"
            android:hint="@string/enter_source"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/link"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:hint="@string/paste_source_link"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </GridLayout>

</LinearLayout>