<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:padding="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/app_name"/>

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:rowCount="3"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/step"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="8dp"
            android:layout_gravity="bottom"
            android:textColor="@color/black"
            android:hint="@string/enter_step"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/source"/>

        <EditText
            android:id="@+id/source_name"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="5dp"
            android:layout_gravity="bottom"
            android:textColor="@color/black"
            android:hint="@string/enter_source"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/link"/>

        <EditText
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="8dp"
            android:layout_gravity="bottom"
            android:textColor="@color/black"
            android:hint="@string/paste_source_link"
            android:textSize="16sp" />

    </GridLayout>

</LinearLayout>