<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Effects">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_steps"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:padding="15dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/positive_effects"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="15dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/negative_effects"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="15dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        android:padding="20dp">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="30dp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/next"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"/>

    </LinearLayout>

</LinearLayout>