<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".TimeActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:columnCount="2"
        android:rowCount="5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:padding="10dp"
            android:text="@string/time_gone"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="10dp"
            android:text="@string/none"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:padding="10dp"
            android:text="@string/lastly_relapsed"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="10dp"
            android:text="@string/none"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:padding="10dp"
            android:text="@string/next_step"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:padding="10dp"
            android:marqueeRepeatLimit="marquee_forever"
            android:text="@string/none"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:padding="10dp"
            android:text="@string/ve_effect"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:padding="10dp"
            android:text="@string/none"
            android:textColor="@color/black"
            android:marqueeRepeatLimit="marquee_forever"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:padding="10dp"
            android:text="@string/ve_effect"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:padding="10dp"
            android:marqueeRepeatLimit="marquee_forever"
            android:text="@string/none"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_the_positive_effect"
                android:inputType="text"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:autofillHints="no" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/enter_the_ve_effect"
                android:inputType="text"
                android:gravity="center"
                android:textSize="18sp"
                android:autofillHints="no" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_next_step"
            android:inputType="text"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:autofillHints="no"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="3"
        android:layout_marginTop="30dp">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/effects"
            android:padding="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/next"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>